--- a/artists.html
+++ b/artists.html
@@ -14,9 +14,11 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="music.html">Música</a></li>
+                <li><a href="artists.html">Artistas</a></li>
                 <li><a href="songs.html">Canciones</a></li>
                 <li><a href="sports.html">Deportes</a></li>
                 <li><a href="series.html">Series</a></li>
+                <li><a href="food.html">Comida</a></li>
             </ul>
         </nav>
     </header>
